updated spark/flink impl